// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Button with icon correctly: enzyme.shallow 1`] = `
<Styled(withProps(Styled(button)))
  icon={
    <Icon
      icon="TickerSvg"
      size="s"
    />
  }
  iconDirection="left"
  isDisabled={false}
  mode="filled"
  size="m"
  stretched={false}
  type="error"
>
  <Icon
    icon="TickerSvg"
    size="s"
  />
  Test
</Styled(withProps(Styled(button)))>
`;

exports[`renders error Button correctly: enzyme.mount 1`] = `
.emotion-1 {
  background-color: #e20c00;
  color: white;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  padding: 8px 8px;
  border-radius: 3px;
  border: 1px solid #e20c00;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-weight: 600;
  line-height: 31.200000000000003px;
  font-size: 12px;
  background-color: #e20c00;
  color: white;
}

.emotion-0:hover {
  background-color: #fb0d00;
  border: 1px solid #fb0d00;
  box-shadow: 4px 4px 15px rgba(200,11,0,0.1);
}

.emotion-0:focus {
  outline: none;
  background-color: #c80b00;
  border: 1px solid #950800;
}

.emotion-0:active {
  background-color: #c80b00;
  border: 1px solid #c80b00;
  box-shadow: 'none';
}

.emotion-0:disabled {
  background-color: #f6f6f6;
  border: 1px solid #f3f3f3;
  color: #cdcdcd;
}

.emotion-0:disabled:hover {
  box-shadow: none;
}

.emotion-0 svg {
  margin: 2px;
  fill: white;
}

<Button
  iconDirection="left"
  isDisabled={false}
  mode="filled"
  size="m"
  stretched={false}
  type="error"
>
  <Styled(withProps(Styled(button)))
    iconDirection="left"
    isDisabled={false}
    mode="filled"
    size="m"
    stretched={false}
    type="error"
  >
    <withProps(Styled(button))
      className="emotion-1"
      iconDirection="left"
      isDisabled={false}
      mode="filled"
      size="m"
      stretched={false}
      type="error"
    >
      <Styled(button)
        className="emotion-1"
        createProps={[Function]}
        iconDirection="left"
        isDisabled={false}
        mode="filled"
        size="m"
        stretched={false}
        type="error"
      >
        <button
          className="emotion-0"
          mode="filled"
          size="m"
          type="error"
        >
          Test
        </button>
      </Styled(button)>
    </withProps(Styled(button))>
  </Styled(withProps(Styled(button)))>
</Button>
`;

exports[`renders icon Button correctly: enzyme.shallow 1`] = `
<Styled(withProps(Styled(button)))
  icon={
    <Icon
      icon="TickerSvg"
      size="s"
    />
  }
  iconDirection="left"
  isDisabled={false}
  mode="filled"
  size="m"
  stretched={false}
  type="error"
>
  <Icon
    icon="TickerSvg"
    size="s"
  />
</Styled(withProps(Styled(button)))>
`;

exports[`renders primary Button correctly: enzyme.mount 1`] = `
.emotion-1 {
  background-color: #006cff;
  color: white;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  padding: 8px 8px;
  border-radius: 3px;
  border: 1px solid #006cff;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-weight: 600;
  line-height: 31.200000000000003px;
  font-size: 12px;
  background-color: #006cff;
  color: white;
}

.emotion-0:hover {
  background-color: #1a7bff;
  border: 1px solid #1a7bff;
  box-shadow: 4px 4px 15px rgba(179,211,255,0.1);
}

.emotion-0:focus {
  outline: none;
  background-color: #0056cc;
  border: 1px solid 004cb3;
}

.emotion-0:active {
  background-color: #0056cc;
  border: 1px solid #0056cc;
  box-shadow: 'none';
}

.emotion-0:disabled {
  background-color: #f6f6f6;
  border: 1px solid #f3f3f3;
  color: #cdcdcd;
}

.emotion-0:disabled:hover {
  box-shadow: none;
}

.emotion-0 svg {
  margin: 2px;
  fill: white;
}

<Button
  iconDirection="left"
  isDisabled={false}
  mode="filled"
  size="m"
  stretched={false}
  type="primary"
>
  <Styled(withProps(Styled(button)))
    iconDirection="left"
    isDisabled={false}
    mode="filled"
    size="m"
    stretched={false}
    type="primary"
  >
    <withProps(Styled(button))
      className="emotion-1"
      iconDirection="left"
      isDisabled={false}
      mode="filled"
      size="m"
      stretched={false}
      type="primary"
    >
      <Styled(button)
        className="emotion-1"
        createProps={[Function]}
        iconDirection="left"
        isDisabled={false}
        mode="filled"
        size="m"
        stretched={false}
        type="primary"
      >
        <button
          className="emotion-0"
          mode="filled"
          size="m"
          type="primary"
        >
          Test
        </button>
      </Styled(button)>
    </withProps(Styled(button))>
  </Styled(withProps(Styled(button)))>
</Button>
`;

exports[`renders primary ghost Button correctly: enzyme.mount 1`] = `
.emotion-1 {
  background-color: none;
  color: #006cff;
}

.emotion-1 svg {
  fill: #006cff;
}

.emotion-1:hover,
.emotion-1:active,
.emotion-1:focus {
  color: white;
}

.emotion-1:hover svg,
.emotion-1:active svg,
.emotion-1:focus svg {
  fill: white;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  padding: 8px 8px;
  border-radius: 3px;
  border: 1px solid #006cff;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-weight: 600;
  line-height: 31.200000000000003px;
  font-size: 12px;
  background-color: none;
  color: #006cff;
}

.emotion-0:hover {
  background-color: #1a7bff;
  border: 1px solid #1a7bff;
  box-shadow: 4px 4px 15px rgba(179,211,255,0.1);
}

.emotion-0:focus {
  outline: none;
  background-color: #0056cc;
  border: 1px solid 004cb3;
}

.emotion-0:active {
  background-color: #0056cc;
  border: 1px solid #0056cc;
  box-shadow: 'none';
}

.emotion-0:disabled {
  background-color: #f6f6f6;
  border: 1px solid #f3f3f3;
  color: #cdcdcd;
}

.emotion-0:disabled:hover {
  box-shadow: none;
}

.emotion-0 svg {
  margin: 2px;
  fill: white;
}

.emotion-0 svg {
  fill: #006cff;
}

.emotion-0:hover,
.emotion-0:active,
.emotion-0:focus {
  color: white;
}

.emotion-0:hover svg,
.emotion-0:active svg,
.emotion-0:focus svg {
  fill: white;
}

<Button
  iconDirection="left"
  isDisabled={false}
  mode="ghost"
  size="m"
  stretched={false}
  type="primary"
>
  <Styled(withProps(Styled(button)))
    iconDirection="left"
    isDisabled={false}
    mode="ghost"
    size="m"
    stretched={false}
    type="primary"
  >
    <withProps(Styled(button))
      className="emotion-1"
      iconDirection="left"
      isDisabled={false}
      mode="ghost"
      size="m"
      stretched={false}
      type="primary"
    >
      <Styled(button)
        className="emotion-1"
        createProps={[Function]}
        iconDirection="left"
        isDisabled={false}
        mode="ghost"
        size="m"
        stretched={false}
        type="primary"
      >
        <button
          className="emotion-0"
          mode="ghost"
          size="m"
          type="primary"
        >
          Test
        </button>
      </Styled(button)>
    </withProps(Styled(button))>
  </Styled(withProps(Styled(button)))>
</Button>
`;

exports[`renders secondary Button correctly: enzyme.mount 1`] = `
.emotion-1 {
  background-color: #f3f3f3;
  color: #444;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  padding: 8px 8px;
  border-radius: 3px;
  border: 1px solid #f3f3f3;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-weight: 600;
  line-height: 31.200000000000003px;
  font-size: 12px;
  background-color: #f3f3f3;
  color: #444;
}

.emotion-0:hover {
  background-color: #f6f6f6;
  border: 1px solid #f6f6f6;
  box-shadow: 4px 2px 35px rgba(243,243,243,0.6);
}

.emotion-0:focus {
  outline: none;
  background-color: #f0f0f0;
  border: 1px solid 004cb3;
}

.emotion-0:active {
  background-color: #f0f0f0;
  border: 1px solid #f0f0f0;
  box-shadow: 'none';
}

.emotion-0:disabled {
  background-color: #f6f6f6;
  border: 1px solid #f3f3f3;
  color: #cdcdcd;
}

.emotion-0:disabled:hover {
  box-shadow: none;
}

.emotion-0 svg {
  margin: 2px;
  fill: white;
}

<Button
  iconDirection="left"
  isDisabled={false}
  mode="filled"
  size="m"
  stretched={false}
  type="secondary"
>
  <Styled(withProps(Styled(button)))
    iconDirection="left"
    isDisabled={false}
    mode="filled"
    size="m"
    stretched={false}
    type="secondary"
  >
    <withProps(Styled(button))
      className="emotion-1"
      iconDirection="left"
      isDisabled={false}
      mode="filled"
      size="m"
      stretched={false}
      type="secondary"
    >
      <Styled(button)
        className="emotion-1"
        createProps={[Function]}
        iconDirection="left"
        isDisabled={false}
        mode="filled"
        size="m"
        stretched={false}
        type="secondary"
      >
        <button
          className="emotion-0"
          mode="filled"
          size="m"
          type="secondary"
        >
          Test
        </button>
      </Styled(button)>
    </withProps(Styled(button))>
  </Styled(withProps(Styled(button)))>
</Button>
`;

exports[`renders success Button correctly: enzyme.mount 1`] = `
.emotion-1 {
  background-color: #63ad0e;
  color: white;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  padding: 8px 8px;
  border-radius: 3px;
  border: 1px solid #63ad0e;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-weight: 600;
  line-height: 31.200000000000003px;
  font-size: 12px;
  background-color: #63ad0e;
  color: white;
}

.emotion-0:hover {
  background-color: #70c510;
  border: 1px solid #70c510;
  box-shadow: 4px 4px 15px rgba(99,173,14,0.1);
}

.emotion-0:focus {
  outline: none;
  background-color: #55950c;
  border: 1px solid #3a6608;
}

.emotion-0:active {
  background-color: #55950c;
  border: 1px solid #55950c;
  box-shadow: 'none';
}

.emotion-0:disabled {
  background-color: #f6f6f6;
  border: 1px solid #f3f3f3;
  color: #cdcdcd;
}

.emotion-0:disabled:hover {
  box-shadow: none;
}

.emotion-0 svg {
  margin: 2px;
  fill: white;
}

<Button
  iconDirection="left"
  isDisabled={false}
  mode="filled"
  size="m"
  stretched={false}
  type="success"
>
  <Styled(withProps(Styled(button)))
    iconDirection="left"
    isDisabled={false}
    mode="filled"
    size="m"
    stretched={false}
    type="success"
  >
    <withProps(Styled(button))
      className="emotion-1"
      iconDirection="left"
      isDisabled={false}
      mode="filled"
      size="m"
      stretched={false}
      type="success"
    >
      <Styled(button)
        className="emotion-1"
        createProps={[Function]}
        iconDirection="left"
        isDisabled={false}
        mode="filled"
        size="m"
        stretched={false}
        type="success"
      >
        <button
          className="emotion-0"
          mode="filled"
          size="m"
          type="success"
        >
          Test
        </button>
      </Styled(button)>
    </withProps(Styled(button))>
  </Styled(withProps(Styled(button)))>
</Button>
`;

exports[`renders warning Button correctly: enzyme.mount 1`] = `
.emotion-1 {
  background-color: #ff7d3a;
  color: white;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: auto;
  padding: 8px 8px;
  border-radius: 3px;
  border: 1px solid #ff7d3a;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif;
  font-weight: 600;
  line-height: 31.200000000000003px;
  font-size: 12px;
  background-color: #ff7d3a;
  color: white;
}

.emotion-0:hover {
  background-color: #ff8e54;
  border: 1px solid #ff8e54;
  box-shadow: 4px 4px 15px rgba(255,125,58,0.1);
}

.emotion-0:focus {
  outline: none;
  background-color: #ff6c21;
  border: 1px solid #ed5000;
}

.emotion-0:active {
  background-color: #ff6c21;
  border: 1px solid #ff6c21;
  box-shadow: 'none';
}

.emotion-0:disabled {
  background-color: #f6f6f6;
  border: 1px solid #f3f3f3;
  color: #cdcdcd;
}

.emotion-0:disabled:hover {
  box-shadow: none;
}

.emotion-0 svg {
  margin: 2px;
  fill: white;
}

<Button
  iconDirection="left"
  isDisabled={false}
  mode="filled"
  size="m"
  stretched={false}
  type="warning"
>
  <Styled(withProps(Styled(button)))
    iconDirection="left"
    isDisabled={false}
    mode="filled"
    size="m"
    stretched={false}
    type="warning"
  >
    <withProps(Styled(button))
      className="emotion-1"
      iconDirection="left"
      isDisabled={false}
      mode="filled"
      size="m"
      stretched={false}
      type="warning"
    >
      <Styled(button)
        className="emotion-1"
        createProps={[Function]}
        iconDirection="left"
        isDisabled={false}
        mode="filled"
        size="m"
        stretched={false}
        type="warning"
      >
        <button
          className="emotion-0"
          mode="filled"
          size="m"
          type="warning"
        >
          Test
        </button>
      </Styled(button)>
    </withProps(Styled(button))>
  </Styled(withProps(Styled(button)))>
</Button>
`;
